--- a/packages/stylelint-config-react-app/package.json
+++ b/packages/stylelint-config-react-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@foreachbe/stylelint-config-react-app",
-  "version": "4.1.0-beta.0",
+  "version": "4.1.0",
   "description": "Stylint configuration used by Foreach",
   "main": "index.js",
   "publishConfig": {
